Modify swagger
